[package]
name = "red-analol"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "git@github.com:etactica/red-heart.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "0.6.0-alpha.5"
# _reallllly_ can't do that while wb-hal is not doing it...
# And really, am I meant to be importing that myself anyway?
#embedded-hal = "1.0.0-alpha.4"
panic-itm = "0.4"
# have to specify our package size apparently... (local path if we're local!)
stm32wb-hal = { version = "0.1.14", features = ["rt", "xG-package"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"

# Allows us to hack on the HAL layer.
[patch.crates-io]
stm32wb-hal = { path = "../rust-eupn-stm32wb-hal" }
stm32wb = { path = "../stm32-rs/stm32wb" }
